<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SearchActivity">

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:weightSum="4"
        android:padding="6dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_search_red_24"></ImageView>

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:hint="@string/searchItem"
            android:background="@null"></EditText>

        <TextView
            android:id="@+id/tv_searchBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/searchText"
            android:textColor="@color/colorSkyBlue"
            android:textSize="22dp"></TextView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/tv_searchnotfound"
                android:src="@drawable/search_result"
                ></ImageView>

        <TextView
            android:id="@+id/tv_searchnotfound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchnotfound"
            android:textColor="@color/colorGrey"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:layout_centerInParent="true"></TextView>


    </RelativeLayout>

</RelativeLayout>