<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/login_logo"></ImageView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorWhite"
            app:cardCornerRadius="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:src="@drawable/user_email"
                        ></ImageView>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/gilroy_regular"
                        android:background="@null"
                        android:hint="@string/yourEmail"></EditText>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="60dp"
                    android:background="#c0c0c0"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:src="@drawable/user_password"
                        ></ImageView>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/gilroy_regular"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:background="@null"
                        android:hint="@string/yourPassword"></EditText>
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/forgotPassword"
            android:fontFamily="@font/gilroy_medium"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorWhite"></TextView>


        <TextView
            android:id="@+id/tv_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_button_shape"
            android:fontFamily="@font/gilroy_semibold"
            android:paddingLeft="70dp"
            android:paddingTop="12dp"
            android:paddingRight="70dp"
            android:paddingBottom="12dp"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="normal"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/login_fb"
                android:layout_marginEnd="10dp"
                ></ImageView>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/login_g"
                ></ImageView>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/gilroy_regular"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="40dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorWhite"
            android:text="@string/newuser"></TextView>

    </LinearLayout>




</ScrollView>