<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity">


    <RelativeLayout
        android:id="@+id/relative_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/register_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/register_toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/back_arrow_register"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/back_btn"></ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/newuser"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="22dp"></TextView>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_appbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="20dp"
                    android:background="#c0c0c0" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="8dp"
                    android:background="#c0c0c0"></View>

                <EditText
                    android:id="@+id/et_rFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:singleLine="true"
                    android:textColorHighlight="@color/registerFontColor"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:hint="@string/firstName"
                    android:padding="4dp"
                    android:textSize="20dp"></EditText>

                <EditText
                    android:id="@+id/et_rLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:textColorHighlight="@color/registerFontColor"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:singleLine="true"
                    android:hint="@string/lastName"
                    android:padding="4dp"
                    android:textSize="20dp"></EditText>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="20dp"
                    android:background="#c0c0c0" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="8dp"
                    android:background="#c0c0c0"></View>

                <EditText
                    android:id="@+id/et_rEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="10dp"
                    android:singleLine="true"
                    android:textColorHighlight="@color/registerFontColor"
                    android:background="@null"
                    android:hint="@string/emailID"
                    android:inputType="textEmailAddress"
                    android:padding="4dp"
                    android:textSize="20dp"></EditText>

                <EditText
                    android:id="@+id/et_rMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:singleLine="true"
                    android:hint="@string/mobileNumber"
                    android:inputType="number"
                    android:textColorHighlight="@color/registerFontColor"
                    android:maxLength="10"
                    android:padding="4dp"
                    android:textSize="20dp"></EditText>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/gender"
                        android:textColorHighlight="@color/registerFontColor"
                        android:singleLine="true"
                        android:textColor="@color/colorLightWhite"
                        android:textSize="20dp"></TextView>


                    <TextView
                        android:id="@+id/tv_rGender"
                        android:layout_width="0dp"
                        android:layout_weight="3.5"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColorHighlight="@color/registerFontColor"
                        android:text="Male"
                        android:textColor="@color/colorBlack"
                        android:textSize="20dp"></TextView>


                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="25dp"
                        android:src="@drawable/arrow"></ImageView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:layout_height="wrap_content"
                        android:hint="@string/country"
                        android:textColorHighlight="@color/registerFontColor"
                        android:textColor="@color/colorLightWhite"
                        android:textSize="20dp"></TextView>


                    <TextView
                        android:id="@+id/tv_rCountry"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:drawablePadding="6dp"
                        android:textColorHighlight="@color/registerFontColor"
                        android:gravity="end"
                        android:text="India"
                        android:textColor="@color/colorBlack"
                        android:textSize="20dp"></TextView>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="25dp"
                        android:src="@drawable/arrow"></ImageView>

                </LinearLayout>

                <EditText
                    android:id="@+id/et_rPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="10dp"
                    android:textColorHighlight="@color/registerFontColor"
                    android:background="@null"
                    android:hint="@string/yourPassword"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:padding="4dp"
                    android:textSize="20dp"></EditText>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:weightSum="3">

                    <EditText
                        android:id="@+id/et_rConfirmPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@null"
                        android:textColorHighlight="@color/registerFontColor"
                        android:inputType="textPassword"
                        android:hint="@string/confirmyourPassword"
                        android:maxLength="10"
                        android:textSize="20dp" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="Confirm "
                        android:textColor="@color/colorSkyBlue"
                        android:textSize="20dp"></TextView>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_register_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="90dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="3dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/colorSkyBlue"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/register"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="20dp"></TextView>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>



    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>